Added hidden expenses on list summary

--- a/src/styles/components/_page-header.scss
+++ b/src/styles/components/_page-header.scss
@@ -16,3 +16,10 @@
         font-weight: 700;
     }
 }
+
+.page-header__subtitle {
+    color: $grey;
+    font-style: italic;
+    font-weight: 300;
+    margin: 0;
+}
